# discipline_terra

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  docker-compose.yml  local_settings.py  manage.py  pyproject.toml  requirements.txt
accounts/: auth.py  models.py  urls.py  views.py
accounts/management/commands/: create_first_user_profile.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: activity_list.html  base-accounts.html  login.html  profile.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: base-catalog.html  catalog_confirm_delete.html  catalog_create_form.html  catalog_list.html  catalog_update_form.html  price_catalog_list.html  price_confirm_delete.html  price_create_form.html  price_detail.html  price_list.html  price_update_form.html
cover/: urls.py  views.py
cover/templates/cover/: cover.html
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py
customers/templates/customers/: customer_list.html  customer_update_form.html
discipline_terra/: asgi.py  settings.py  urls.py  wsgi.py
discipline_terra/static/css/: starter-template.css
discipline_terra/templates/: base.html
discipline_terra3/: asgi.py  settings.py  urls.py  wsgi.py
invoices/: admin.py  conf.py  draw_pdf.py  forms.py  it_phones.py  modelfields.py  models.py  urls.py  views.py  widgets.py
invoices/management/commands/: import_invoice_headings.py  import_payment_types.py
invoices/migrations/: 0001_initial.py
invoices/templates/: customer_detail.html
invoices/templates/invoices/: base-invoices.html  customer_confirm_delete.html  customer_create_form.html  customer_detail.html  customer_list.html  customer_update_form.html  invoice_create_form.html  invoice_detail.html  invoice_list.html  invoiceheading_create_form.html  invoiceheading_detail.html  invoiceheading_list.html  invoiceheading_update_form.html  item_confirm_delete.html  item_create_form.html  item_update_form.html  order_detail.html  (+8 more)
postgres-initdb/: init-disciplineterra.sh
stock/: admin.py  forms.py  models.py  urls.py  views.py
stock/migrations/: 0001_initial.py
templates/: base.html
(+17 files in other folders)
