[tool.poetry]
name = "discipline_terra"
version = "0.1.0"
description = "ERP Discipline della Terra"
authors = ["Giuseppe Martino <martinogiuseppe@gmail.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
docker-compose = "^1.27.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
exclude = '''
(
/(
\.git
| \.venv
)/
)
'''

[tool.isort]
skip = [".tox", ".venv", ".git"]
known_frameworks = []
profile = "black"
atomic = true
sections = ["FUTURE", "STDLIB", "MOCK", "FRAMEWORKS", "THIRDPARTY", "FIRSTPARTY", "TESTS", "LOCALFOLDER"]
known_third_party = ["django", "localflavor", "openid", "reportlab"]
