[tool.poetry]
name = "discipline_terra3"
version = "0.1.0"
description = "ERP for a Bottega Solidale"
authors = ["Giuseppe Martino <martinogiuseppe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
docker-compose = "^1.27.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
